--- a/OrderItemWeb/Views/Order/Create.cshtml
+++ b/OrderItemWeb/Views/Order/Create.cshtml
@@ -47,6 +47,9 @@
                 <div class="input-group mb-3">
                     <label class="input-group-text col-3 text-light">Order Date</label>
                     <input id="orderDate" type="text" class="form-control col-9" name="OrderDate" required />
+                    <div class="input-group-append">
+                        <button id="btnClearDate" class="btn btn-secondary">Clear</button>
+                    </div>
                 </div>
                 <p id="orderDateErr" style="color: red"></p>
             </div>
@@ -117,7 +120,15 @@
             dateFormat: "Y-m-d"
         });
 
+        $("#btnClearDate").click(function(e) {
+            $("#orderDate").val("");
+        })
+
         $("#btnAddItem").click(function(e) {
+            if ($("#itemData tr").length == 1) {
+                $("#itemData tr:last").before(`<tr><td id="newItemMarker" colspan="6" style="background-color: green;">New Item</td></tr>`)
+            }
+
             $("#itemData tr:last").before(`<tr class="editable">` + "<td></td>" + "<td>" + `<div class="btn-group" role="group">
                             <button class="btn btn-info" title="Edit...">
                                 <i class="far fa-save"></i>
@@ -153,7 +164,32 @@
 
         $(document).on('click', '.btn-info', function(e) {
             var td = $(this).parent().parent();
+            
+            if (td.siblings(".name").text() == null || td.siblings(".name").text() == "") {
+                toastAlert("Item Name must be filled!", "info", 5000);
+                return;
+            }
+
+            var price = parseFloat(td.siblings(".price").text());
+            var qty = parseInt(td.siblings(".qty").text());
+
+            if (isNaN(price) || isNaN(qty)) {
+                toastAlert("Quantity and price field must be a valid number!", "info", 5000);
+                return;
+            }
+
             td.siblings().removeAttr("contenteditable");
+
+            td.siblings(".price").text(price.toLocaleString('id-ID', {
+                                minimumFractionDigits: 0,
+                                maximumFractionDigits: 0
+                            }));
+
+            var total = price * qty
+            td.siblings(".total").text(total.toLocaleString('id-ID', {
+                                minimumFractionDigits: 0,
+                                maximumFractionDigits: 0
+                            }));
 
             td.children().empty();
             td.children().append(`<button class="btn btn-outline-info" title="Edit...">
@@ -164,10 +200,7 @@
                                 <i class="fas fa-trash-alt"></i>
                             </button>`);
 
-            var price = parseFloat(td.siblings(".price").text())
-            var qty = parseInt(td.siblings(".qty").text())
-            var total = price * qty
-            td.siblings(".total").text(total);
+            
 
             // var totalItemTxt = $("#totalItem").text();
 
@@ -177,7 +210,7 @@
 
             totalOrderItem += qty;
             console.log("qty: " + qty);
-
+            
             $("#totalItem").text(`Total Item: ${totalOrderItem}`);
 
             // var totalAmountTxt = $("#totalAmount").text();
@@ -188,12 +221,46 @@
             console.log(`Total Item: ${totalOrderItem}`);
             console.log(`Total Amount: ${totalOrderAmount}`);
 
+            var amountCurr = totalOrderAmount.toLocaleString('id-ID', {
+                                minimumFractionDigits: 0,
+                                maximumFractionDigits: 0
+                            });
+
             // var totalAmount = total + parseInt(totalAmountTxt.substring(14));
-            $("#totalAmount").text(`Total Amount: ${totalOrderAmount}`);
+            $("#totalAmount").text(`Total Amount: ${amountCurr}`);
         });
 
         $(document).on('click', '.btn-danger', function(e) {
             $(this).parent().parent().parent().remove();
+        });
+
+        $(document).on('click', '.btn-outline-danger', function(e) {
+            $(this).parent().parent().parent().remove();
+
+            var td = $(this).parent().parent();
+
+            var price = parseFloat(td.siblings(".price").text().replace(/\./g, ""));
+            var qty = parseInt(td.siblings(".qty").text());
+
+            totalOrderItem -= qty;
+            console.log("qty: " + qty);
+
+            $("#totalItem").text(`Total Item: ${totalOrderItem}`);
+
+            var total = price * qty
+
+            totalOrderAmount -= total;
+            console.log("total: " + total);
+
+            console.log(`Total Item: ${totalOrderItem}`);
+            console.log(`Total Amount: ${totalOrderAmount}`);
+
+            var amountCurr = totalOrderAmount.toLocaleString('id-ID', {
+                                minimumFractionDigits: 0,
+                                maximumFractionDigits: 0
+                            });
+
+            $("#totalAmount").text(`Total Amount: ${amountCurr}`);
         });
 
         $("#frmOrder").submit(function(e) {
