total field in create page will not be editable when inputting new data

--- a/OrderItemWeb/Views/Order/Create.cshtml
+++ b/OrderItemWeb/Views/Order/Create.cshtml
@@ -156,7 +156,7 @@
             td.siblings(".name").prop("contenteditable", true);
             td.siblings(".qty").prop("contenteditable", true);
             td.siblings(".price").prop("contenteditable", true);
-            td.siblings(".total").prop("contenteditable", true);
+            // td.siblings(".total").prop("contenteditable", true);
 
             totalOrderItem -= parseInt(td.siblings(".qty").text());
             totalOrderAmount -= parseFloat(td.siblings(".price").text())
