--- a/OrderItemWeb/Views/Shared/_Header.cshtml
+++ b/OrderItemWeb/Views/Shared/_Header.cshtml
@@ -1,10 +1,17 @@
 ﻿<header>
     <nav class="navbar navbar-expand navbar-light navbar-top">
-        <div class="container-fluid">
-            <a href="https://localhost:7110/Home">
-                <i class="fas fa-home"></i>
-            </a>
-        </div>       
+        <div class="container-fluid m-0">
+            <div class="row gx-5">
+                <div class="ml-auto col-auto fa-2x">
+                    <a href="https://localhost:7110/Home">
+                        <i class="fas fa-home"></i>
+                    </a>
+                </div>
+                <div class="ml-auto col-auto mt-1">
+                    <h2>@ViewBag.Title</h2>
+                </div>
+            </div>          
+        </div>             
     </nav>
 </header>
 
